Revert "bug fix"
This reverts commit 918bbe82b34661120f7488f861280e539307b7c6.

--- a/404.html
+++ b/404.html
@@ -6,5 +6,5 @@ permalink: 404.html
 
 <div class="page">
   <h1 class="page-title">404: 这里啥都没有</h1>
-  <p class="lead">呀呀，你好像走错路了,你妈叫你<a href="/">回家</a>吃饭</p>
+  <p class="lead">呀呀，你好像走错路了,你妈叫你<a href="{{ site.baseurl }}">回家</a>吃饭</p>
 </div>
